removes min-height vh units on images to fix 'jumpy bug' in mobile app browsers

--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -807,7 +807,6 @@ nav {
 .landing-section-image-container {
 	display: block;
 	height: 100%;
-	min-height: 72vh;
 	margin: 0;
 	overflow: hidden;
 	padding: 0;
